testcases/semantic/valid/while.rs
fn main() {
    while (2 > 5) {
        break;
    }
    exit(0);
}
