testcases/semantic/invalid/break.rs
fn main() {
    loop {
        loop {}
    }
    break;
    exit(0);
}
